--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 CANVA_FRONTEND_PORT=8080
 CANVA_BACKEND_PORT=3001
-CANVA_BACKEND_HOST=http://localhost:3001 # TODO: replace this with your production URL before submitting your app
+CANVA_BACKEND_HOST=const response = await fetch(`${BACKEND_HOST}/custom-route`);# TODO: replace this with your production URL before submitting your app
 CANVA_APP_ID=AAFsQ60j2ME
 CANVA_HMR_ENABLED=TRUE
